Pictures of isag update by changhua.li

--- a/jsf2demo/src/main/webapp/isag/_includes/header.xhtml
+++ b/jsf2demo/src/main/webapp/isag/_includes/header.xhtml
@@ -13,7 +13,9 @@
 <ui:composition>
 
 	<h:panelGroup layout="block" styleClass="clearfix headercontainer">
-		<h:panelGroup layout="block" styleClass="firmaIcons"></h:panelGroup>
+		<h:panelGroup layout="block" styleClass="firmaIcons">
+			<h:graphicImage value="isag/_images/header/ISAG1.png"></h:graphicImage>
+		</h:panelGroup>
 		<h:panelGroup layout="block" styleClass="tagesberichtTitle">
 			<h:outputText value="Tagebericht mit Fehlermerkmalen" styleClass="titleClass"/>
 			<p:spacer width="30px"/>
