--- a/jsf2demo/src/main/webapp/isag/_includes/primeFaces_personTable.xhtml
+++ b/jsf2demo/src/main/webapp/isag/_includes/primeFaces_personTable.xhtml
@@ -22,7 +22,7 @@
                 Id Header
             </f:facet>
 
-            <h:outputText value="#{person.id_Personen}" />
+            <h:outputText value="#{person.pk_Personen}" />
 
             <f:facet name="footer">
                 Id Footer
